--- a/angular.json
+++ b/angular.json
@@ -113,8 +113,13 @@
               "devServerTarget": "sport:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
-    }},
+    }
+  },
   "defaultProject": "sport"
 }
